--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "^45.0.4",
+    "expo": "*",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
     "react": "17.0.2",
